--- a/command.html
+++ b/command.html
@@ -38,6 +38,16 @@ npm install --save-dev vite laravel-vite-plugin
 npm run build
 
 php artisan vendor:publish --provider="Maatwebsite\Excel\ExcelServiceProvider" --tag=config
+
+php artisan make:seeder UserSeeder
+php artisan migrate:fresh --seed
+          
+composer require laravel/breeze --dev
+php artisan breeze:install
+php artisan migrate
+npm install
+npm run dev
+          
         </textarea>
       </div>
     </div>
