--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                   <a href="./multi_auth.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Multi AUTH</a>
                   <a href="./paginator.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Paginator</a>
                   <a href="./toastr.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Toastr</a>
+                  <a href="./data_table.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Data Table</a>
                   <a href="./rest_api.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Rest API</a>
                   <a href="./validation.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Validation</a>
                   <a href="./git.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Git</a>
