--- a/migration.html
+++ b/migration.html
@@ -94,6 +94,10 @@ use App\Models\User;
         }
     }
           
+public function run()
+{
+    $this->call(UserSeeder::class);
+}  
         </textarea>
       </div>
     </div>
