--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                   <a href="./filter.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Filter</a>
                   <a href="./xampp.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Xampp</a>
                   <a href="./domain_hosting.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Domain Hosting</a>
+                  <a href="./session_count.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Session Count</a>
                   
                 </div>
             </div>
