--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                   <a href="./xampp.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Xampp</a>
                   <a href="./domain_hosting.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Domain Hosting</a>
                   <a href="./session_count.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Session Count</a>
+                  <a href="./ajax_create_show.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">AJAX Create & Show</a>
                   
                 </div>
             </div>
