--- a/github.html
+++ b/github.html
@@ -11,7 +11,13 @@
   <body>
     <div class="container pt-4">
       <div class="row">
-        <textarea cols="200" rows="20" class="form-control"> 
+        <textarea cols="200" rows="20" class="form-control">                                             
+git init
+git add -A
+git commit -m "Any Coment"
+git [copy-paste]
+git push origin master
+          
 clear (Ctrl+l)
 git --version (git er version dekhte hole)
 git config --global user.name "user_name" (local e user er name set korte hole)
