--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
                   <a href="./data_table.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Data Table</a>
                   <a href="./rest_api.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Rest API</a>
                   <a href="./validation.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Validation</a>
-                  <a href="./git.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Git</a>
                   <a href="./ckeditor5.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Ckeditor 5</a>
                   <a href="./packages.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Packages</a>
                   <a href="./orm.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">ORM</a>
@@ -42,7 +41,7 @@
                   <a href="./report_seacrh.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Report Seacrh</a>
                   <a href="./table.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Table</a>
                   <a href="./on_off_js.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">On Off JS</a>
-                  <a href="./owl_carousel.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">On Off JS</a>
+                  <a href="./owl_carousel.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Owl Carousel</a>
                   <a href="./email_verification.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Email Verification</a>
                   <a href="./upload_progressBar.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Upload ProgressBar</a>
                   <a href="./currencyExchange.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Currency Exchange</a>
