--- a/github.html
+++ b/github.html
@@ -18,7 +18,7 @@ git commit -m "Any Coment"
 git [copy-paste]
 git push origin master
           
-clear (Ctrl+l)
+clear / ( ctrl+l )
 git --version (git er version dekhte hole)
 git config --global user.name "user_name" (local e user er name set korte hole)
 git config --global user.email "user_email" (local e user er email set korte hole)
