--- a/github.html
+++ b/github.html
@@ -11,7 +11,37 @@
   <body>
     <div class="container pt-4">
       <div class="row">
-        <textarea cols="200" rows="20" class="form-control">                                             
+        <textarea cols="200" rows="20" class="form-control">  
+--------------------------------------------------------------------------------------------------------------------------------
+git init
+git add README.md
+git commit -m "first commit"
+git branch -M main
+git remote add origin https://github.com/___/___.git
+git push -u origin main
+
+git clone https://github.com/___/___.git (তৈরি করা অনলাইনের প্রোজেক্ট লোকালে নিয়ে আসতে)
+
+touch fileName.txt (কোন ফাইল তৈরি করতে)
+
+mkdir NewFolder1 (কোন ফোল্ডার তৈরি করতে)
+
+git add -A
+git commit -m "first commit"
+git push origin main
+
+git status (অবস্থা জানতে) tracked/staged
+
+git branch (বর্তমান এ কোন ব্রাঞ্চ এ আছি তা যাচাই করতে)
+git branch -a (সকল ব্রাঞ্চের নাম দেখতে)
+git branch new_branch (নতুন ব্রাঞ্চ তৈরি করতে)
+git checkout new_branch (এক ব্রাঞ্চ থেকে আরেক ব্রাঞ্চ এ যেতে হলে)
+git branch -D branch_name (কোন ব্রাঞ্চ ডিলিট করতে)
+
+git merge new_branch (ভিন্ন ব্রাঞ্চ মেইন ব্রাঞ্চের সাথে এক করতে)
+
+git pull origin main (লোকালে ২য় বার কাজ শুরু করার আগে অনলাইন থেকে আগে উঠিয়ে আনতে হবে)
+--------------------------------------------------------------------------------------------------------------------------------
 git init
 git add -A
 git commit -m "Any Coment"
