--- a/owl_carousel.html
+++ b/owl_carousel.html
@@ -61,7 +61,7 @@
             autoplayTimeout:5000,
             stagePadding:50,
             nav:true,
-            dots:false,
+            dots:true,
             responsive:{
                 0:{
                     items:1
