--- a/owl_carousel.html
+++ b/owl_carousel.html
@@ -54,27 +54,19 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js" integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script>
-            $('.owl-carousel').owlCarousel({
-            loop:false,
-            margin:10,
-            autoplay:true,
-            autoplayTimeout:5000,
-            stagePadding:50,
-            nav:true,
-            dots:true,
-            responsive:{
-                0:{
-                    items:1
-                },
-                600:{
-                    items:3
-                },
-                1000:{
-                    items:4
-                }
-            }
-        })
+      $('.owl-carousel').owlCarousel({
+        loop:false,
+        margin:10,
+        autoplay:true,
+        autoplayTimeout:5000,
+        stagePadding:50,
+        nav:true,
+        dots:true,
+        responsive:{ 0:{ items:1 }, 600:{ items:3 }, 1000:{ items:4 }
+        }
+      })
     </script>
+          
         </textarea>
       </div>
     </div>
