--- a/tooltip.html
+++ b/tooltip.html
@@ -16,11 +16,9 @@
   .myTooltipColor { --bs-tooltip-bg: purple; --bs-tooltip-color: white;}
 </style>
           
-<span class="myTooltips" data-bs-custom-class="myTooltipColor" data-bs-placement="top" title="Add To Cart">
-  <a href="#" class="btn btn-outline-primary px-2 py-0">
+  <a href="#" class="btn btn-outline-primary px-2 py-0 myTooltips" data-bs-custom-class="myTooltipColor" data-bs-placement="top" title="Add To Cart">
     <i class="bi bi-cart-plus-fill fs-3"></i>
   </a>
-</span>
           
 <script>
   const tooltips = document.querySelectorAll('.myTooltips');
