--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                   <a href="./ajax_create_show.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">AJAX Create & Show</a>
                   <a href="./oneColoumMultipleRow.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">One Coloum Multiple Row</a>
                   <a href="./tooltip.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Tooltip</a>
+                  <a href="./my_sql.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">My SQL</a>
 
 
 
