--- a/react.html
+++ b/react.html
@@ -92,6 +92,45 @@ class User extends Component {
     }
 }
 --------------------------------------------------------------------------------------------
+User.js
+import React,{Component} from 'react';
+import "./User.css"
+class User extends Component {
+    render(){
+        const text = {
+            color: "red",
+            textAlign: "center"
+        }
+        return(
+            <div className="box">
+                <h1 style={text}>Hello {this.props.name}</h1>
+                <p style={{
+                    color: "blue",
+                    fontSize: "33px",
+                    textAlign: "center"
+                }}
+                >How Are You ?</p>
+            </div>
+        );
+    }
+}
+export default User;
+User.css
+.box{
+    width: 300px;
+    box-shadow: 0px 0px 10px gray;
+    border-radius: .5rem;
+    text-align: center;
+    margin: 20px auto;
+    padding: 20px;
+}
+--------------------------------------------------------------------------------------------
+--------------------------------------------------------------------------------------------
+--------------------------------------------------------------------------------------------
+--------------------------------------------------------------------------------------------
+--------------------------------------------------------------------------------------------
+--------------------------------------------------------------------------------------------
+--------------------------------------------------------------------------------------------
 
           
         </textarea>
