--- a/react.html
+++ b/react.html
@@ -125,6 +125,8 @@ User.css
     padding: 20px;
 }
 --------------------------------------------------------------------------------------------
+import UserStyle from "./User.module.css"
+<div className={UserStyle.box}>
 --------------------------------------------------------------------------------------------
 --------------------------------------------------------------------------------------------
 --------------------------------------------------------------------------------------------
