--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                   <a href="./tooltip.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Tooltip</a>
                   <a href="./my_sql.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">My SQL</a>
                   <a href="./react" class="btn btn-outline-success fw-bold mb-2" target="_blank">React</a>
+                  <a href="./cpanel_error" class="btn btn-outline-success fw-bold mb-2" target="_blank">Cpanel Error</a>
                   <a href="./" class="btn btn-outline-success fw-bold mb-2" target="_blank"></a>
 
 
