--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                   <a href="./react.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">React</a>
                   <a href="./cpanel_error.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Cpanel Error</a>
                   <a href="./slug.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Slug</a>
+                  <a href="./nice_admin_sidebar.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">nice_admin_sidebar</a>
                   <a href="./" class="btn btn-outline-success fw-bold mb-2" target="_blank"></a>
 
 
