--- a/toastr.html
+++ b/toastr.html
@@ -13,35 +13,31 @@
       <div class="row">
         <textarea cols="200" rows="20" class="form-control"> 
 return redirect()->back()->with('success','Added Successfully Done');
+          
 <!--toastr css-->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" integrity="sha512-vKMx8UnXk60zUwyUnUPM3HbQo8QfmNx7+ltw8Pm5zLusl1XIfwcxo8DbWCqMGKaWeNxWA8yrx5v3SaVpMvR3CA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 <!--ajax js-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js" integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <!--toastr js-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" integrity="sha512-VEd+nq25CkR676O+pLBnDW09R7VQX9Mdiij052gVCp5yVH3jGtH70Ho/UUv4mJDsEdTvqRCFZg0NKGiojGnUCw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script>
     @if(Session::has('success'))
-        toastr.options={
-            "closeButton":true,
-            "progressBar":true,
-        }
+        toastr.options={ "closeButton":true, "progressBar":true, }
         toastr.success("{{ session('success')}}")
     @endif
     @if(Session::has('warning'))
-        toastr.options={
-            "closeButton":true,
-            "progressBar":true,
-        }
+        toastr.options={ "closeButton":true, "progressBar":true, }
         toastr.warning("{{ session('warning')}}")
     @endif
     @if(Session::has('error'))
-        toastr.options={
-            "closeButton":true,
-            "progressBar":true,
-        }
+        toastr.options={ "closeButton":true, "progressBar":true, }
         toastr.error("{{ session('error')}}")
     @endif
 </script>
+
+
+
           
 toastr.error          
 toastr.info          
