--- a/messanger_connect_website.html
+++ b/messanger_connect_website.html
@@ -9,10 +9,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   </head>
   <body>
-    <div class="container pt-4">
+    <div class="container-fluid pt-4">
       <div class="row">
       <div class="col-12">
-<object data="./Messanger Connect With Website.pdf" type="application/pdf" style="width:100%;height:100vh;"></object>        
+<object data="./Messanger Connect With Website.pdf" type="application/pdf" style="width:100%;height:90vh;"></object>        
       </div>
       </div>
     </div>
