--- a/react.html
+++ b/react.html
@@ -18,6 +18,7 @@ create-react-app --version
 npm install -g create-react-app
 create-react-app myapp
 cd myapp
+code .
 npm start  
 --------------------------------------------------------------------------------------------
 components -> 1)class based components 2) functional components
