--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                   <a href="./nice_admin_sidebar.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">nice_admin_sidebar</a>
                   <a href="./messanger_connect_website.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Messanger Connect Website</a>
                   <a href="./simple_multi_auth.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">simple_multi_auth</a>
+                  <a href="./livewire.html" class="btn btn-outline-success fw-bold mb-2" target="_blank">Livewire</a>
                   <a href="./" class="btn btn-outline-success fw-bold mb-2" target="_blank"></a>
 
 
