--- a/livewire.html
+++ b/livewire.html
@@ -30,6 +30,7 @@
       <div class="modal-body">
         <textarea cols="200" rows="15" class="form-control">
 composer require livewire/livewire
+php artisan livewire:layout
 php artisan make:livewire Product
 php artisan make:livewire Posts\\CreatePost
 php artisan make:livewire posts.create-post
